修复 npm publish 之后无法安装的问题
具体原因不清楚，但主要是因为 cli.js 文件没有 publish 出去，所以每次 npm install git-todos 时总会出现下面错误
`Error: ENOENT, chmod '/Users/mora/my/git-todos/node_modules/git-todos/cli.js'`

在它的安装提示中找到它是在 https://registry.npmjs.org/git-todos/0.0.4 上面拉取安装包的，在这URL上又可以找到此包的下载地址，下载下来之后发现没有 cli.js

同时在 ~/.npm/git-todos 文件夹下也是没有 cli.js，所以它才提示那个错误

不知道为什么 npm publish 之后不把那文件发布出去，所以我就只好把这文件移动到 lib 目录内，结果正常解决了

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "git-todos",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "main": "lib/git-todos.js",
   "description": "在git项目下快速创建待办事项",
   "homepage": "https://github.com/qiu8310/git-todos",
@@ -27,11 +27,11 @@
   "scripts": {
   },
   "bin": {
-    "git-todos": "cli.js"
+    "git-todos": "lib/cli.js"
   },
   "preferGlobal": "true",
   "dependencies": {
-    "commander": "^2.5.0",
-    "moment": "^2.8.4"
+    "commander": "~2.5.0",
+    "moment": "~2.5.0"
   }
 }
